--- a/index.html
+++ b/index.html
@@ -28,82 +28,79 @@
 			<h3 class="elements__title">My works</h3>
 			<h3 class="elements__time">&centerdot; 2021-2023</h3>
 		</div>
-		<div class="cards">
-			<ul class="works">
-				<li class="work">
-					<a class="work__link" href="https://salnivlada.github.io/Moldova-in-photos/" target="_blank">
-						<img class="work__img" src="./images/7.png" alt="Moldova in photos">
-						<div class="work__info">
-							<h3 class="work__title">Moldova in photos</h3>
-							<h3 class="work__subtitle">HTML/CSS/Javascript/SwiperJS</h3>
-						</div>
-					</a>
-				</li>
+		<div class="container">
 
-				<li class="work">
-					<a class="work__link" href="https://github.com/SalniVlada/react-mesto-api-full" target="_blank">
-						<img class="work__img" src="./images/project1.png" alt="Место">
-						<div class="work__info">
-							<h3 class="work__title">Mesto</h3>
-							<h3 class="work__subtitle">React/Api</h3>
-						</div>
-					</a>
-				</li>
+			<div class="card">
+				<a class="card__link" href="https://salnivlada.github.io/Moldova-in-photos/" target="_blank">
+					<img class="card__img" src="./images/7.png" alt="Moldova in photos">
+					<div class="card__info">
+						<h3 class="card__title">Moldova in photos</h3>
+						<h3 class="card__subtitle">HTML/CSS/Javascript/SwiperJS</h3>
+					</div>
+				</a>
+			</div>
 
-				<li class="work">
-					<a class="work__link" href="https://github.com/SalniVlada/movies-explorer-frontend" target="_blank">
-						<img class="work__img" src="./images/project3.png" alt="Movies">
-						<div class="work__info">
-							<h3 class="work__title">Movies</h3>
-							<h3 class="work__subtitle">React/Api/Node.js/Express/MongoDB</h3>
-						</div>
-					</a>
-				</li>
+			<div class="card">
+				<a class="card__link" href="https://salnivlada.github.io/carding-mood/" target="_blank">
+					<img class="card__img" src="./images/project4.png" alt="Working mood">
+					<div class="card__info">
+						<h3 class="card__title">Working mood</h3>
+						<h3 class="card__subtitle">HTML/CSS/Javascript/Bootstrap</h3>
+					</div>
+				</a>
+			</div>
 
-				<li class="work">
-					<a class="work__link" href="https://salnivlada.github.io/calculator/" target="_blank">
-						<img class="work__img" src="./images/project5.png" alt="Calculator">
-						<div class="work__info">
-							<h3 class="work__title">Calculator</h3>
-							<h3 class="work__subtitle">HTML/CSS/Javascript</h3>
-						</div>
-					</a>
-				</li>
-			</ul>
+			<div class="card">
+				<a class="card__link" href="https://salnivlada.github.io/City/" target="_blank">
+					<img class="card__img" src="./images/project2.png" alt="City">
+					<div class="card__info">
+						<h3 class="card__title">City</h3>
+						<h3 class="card__subtitle">Page with parallax effect</h3>
+					</div>
+				</a>
+			</div>
 
-			<ul class="works">
-				<li class="work">
-					<a class="work__link" href="https://salnivlada.github.io/City/" target="_blank">
-						<img class="work__img" src="./images/project2.png" alt="City">
-						<div class="work__info">
-							<h3 class="work__title">City</h3>
-							<h3 class="work__subtitle">Page with parallax effect</h3>
-						</div>
-					</a>
-				</li>
+			<div class="card">
+				<a class="card__link" href="https://github.com/SalniVlada/movies-explorer-frontend" target="_blank">
+					<img class="card__img" src="./images/project3.png" alt="Movies">
+					<div class="card__info">
+						<h3 class="card__title">Movies</h3>
+						<h3 class="card__subtitle">React/Api/Node.js/Express/MongoDB</h3>
+					</div>
+				</a>
+			</div>
 
-				<li class="work">
-					<a class="work__link" href="https://salnivlada.github.io/working-mood/" target="_blank">
-						<img class="work__img" src="./images/project4.png" alt="Working mood">
-						<div class="work__info">
-							<h3 class="work__title">Working mood</h3>
-							<h3 class="work__subtitle">HTML/CSS/Javascript/Bootstrap</h3>
-						</div>
-					</a>
-				</li>
+			<div class="card">
+				<a class="card__link" href="https://github.com/SalniVlada/react-mesto-api-full" target="_blank">
+					<img class="card__img" src="./images/project1.png" alt="Место">
+					<div class="card__info">
+						<h3 class="card__title">Mesto</h3>
+						<h3 class="card__subtitle">React/Api</h3>
+					</div>
+				</a>
+			</div>
 
-				<li class="work">
-					<a class="work__link" href="https://salnivlada.github.io/russian-travel/" target="_blank">
-						<img class="work__img" src="./images/project6.png" alt="Russian travel">
-						<div class="work__info">
-							<h3 class="work__title">Russian travel</h3>
-							<h3 class="work__subtitle">HTML/CSS</h3>
-						</div>
-					</a>
-				</li>
-			</ul>
+			<div class="card">
+				<a class="card__link" href="https://salnivlada.github.io/calculator/" target="_blank">
+					<img class="card__img" src="./images/project5.png" alt="Calculator">
+					<div class="card__info">
+						<h3 class="card__title">Calculator</h3>
+						<h3 class="card__subtitle">HTML/CSS/Javascript</h3>
+					</div>
+				</a>
+			</div>
+
+			<div class="card">
+				<a class="card__link" href="https://salnivlada.github.io/russian-travel/" target="_blank">
+					<img class="card__img" src="./images/project6.png" alt="Russian travel">
+					<div class="card__info">
+						<h3 class="card__title">Russian travel</h3>
+						<h3 class="card__subtitle">HTML/CSS</h3>
+					</div>
+				</a>
+			</div>
 		</div>
-		<button class="button" type="button" >Еще</button>
+		<!-- <button class="button" type="button" >Еще</button> -->
 	</section>
 
 	<section class="info" id="anchor2">
@@ -112,7 +109,7 @@
 			<p class="info__subtitle">
 				My name is Vlada Salnikova.<br>I am 28 years old.
 				I'm a junior Web-engineer. I like to explore new possibilities and know new things.
-				I'm inspired by Python and handiwork.
+				I'm inspired by Python and handicard.
 			</p>
 		</div>
 	</section>
